# QR_CodeGenerator

./: .gitignore  CMakeLists.txt  README.md  output_test.txt  vcpkg.json
include/: QR_codewords.h  QRcode.h  bch.h  codeword_lookup.h  image.h  image_export.h  image_import.h  reed_solomon.h  version.h  version.h.in
src/: QR_codewords.c  QRcode.c  bch.c  codeword_lookup.c  image.c  image_export.c  image_import.c  main.c  reed_solomon.c
tests/: codeword_tests.c  reed_solomon_test.c  test_utils.c  test_utils.h
